2004-06-07  Darin Adler  <darin@apple.com>

        Reviewed by Chris.

        - fixed <rdar://problem/3676761>: (REGRESSION: Text Bigger/Smaller commands are always disabled in TOT)

        * WebView.subproj/WebHTMLView.m: Add @interface declaration for WebTextSizing category
        on WebHTMLView. This must have gotten lost somewhere along the way.

2004-06-05  Trey Matteson  <trey@apple.com>

        WebKit no longer causes an endless stream of dragexit events to
        occur at the DHTML level when hovering over an element that is
        not accepting the drag.

        Reviewed by Chris

        * WebView.subproj/WebView.m:
        (-[WebView _dragOperationForDraggingInfo:]):  If the potential target refuses
        the item, don't turn around and immediately tell it to cancel the drag, which is
        what leads to the exit event happening at the DOM level.  If the target just
        refused the drag, it should not have anything it needs to cancel.

2004-06-03  Trey Matteson  <trey@apple.com>

        DHTML dragging uses the Cocoa NSDragOperation on both the source and dest ends.
        Most of the real work is in WebCore.

        Reviewed by rjw

        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge startDraggingImage:at:operation:event:]):  Pass the drag op along.
        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView _startDraggingImage:at:operation:event:]):  Remember drag op from WC.
        (-[WebHTMLView mouseDragged:]):  Pass None for the op (alternate code path that will
        be going away).
        (-[WebHTMLView draggingSourceOperationMaskForLocal:]):  Use the WC drag op.
        * WebView.subproj/WebHTMLViewInternal.h:
        * WebView.subproj/WebHTMLViewPrivate.h:

=== Safari-143 ===

2004-06-04  Chris Blumenberg  <cblu@apple.com>

        Fixed: <rdar://problem/3674921>: (can't drag an image from Desktop to Blot document)

        Reviewed by mjs.

        * WebView.subproj/WebDataSource.m: